@@ -14,12 +14,14 @@ IO/TST.pm
 IO/Makefile.PL
 Query/Query.pm
 Query/Makefile.PL
-Query/Query/USNOA2.pm
-Query/Query/GSC.pm
+Query/Query/2MASS.pm
 Query/Query/CMC.pm
-Query/Query/SuperCOSMOS.pm
-Query/Query/Sesame.pm
+Query/Query/GSC.pm
 Query/Query/SIMBAD.pm
+Query/Query/Sesame.pm
+Query/Query/SkyCat.pm
+Query/Query/SuperCOSMOS.pm
+Query/Query/USNOA2.pm
 Query/Query/Vizier.pm
 Query/Query/Makefile.PL
 Transport/REST.pm
@@ -36,11 +38,10 @@ t/3_catalog.t
 t/3_star.t
 t/4_gsc.t
 t/4_cmc.t
-t/4_gsc_cmp_skycat.t
-t/4_supercos.t
 t/4_usnoa2.t
 t/4_simbad.t
 t/4_skycat_usno.t
 t/4_skycat_gsc.t
+t/4_skycat_supercos.t
 etc/README
 etc/sss.cfg
