@@ -77,7 +77,7 @@ foreach my $line ( 0 .. $#buffer ) {
        $star->magerr( \%mag_errors );
               
        # Quality
-       my $quality = $separated[11];
+       my $quality = $separated[13];
        $star->quality( $quality );
               
        # Field
@@ -133,14 +133,14 @@ compare_catalog( $catalog_byname, $catalog_data);
 exit;
 
 # D A T A   B L O C K  -----------------------------------------------------
-# nr gsc_id     ra   (2000)   dec       pos-e  mag mag-e  b c  pl  mu    d'  pa
+# nr gsc_id     ra   (2000) dec          pos-e mag  mag-e b c  pl  mu    d'  pa
 __DATA__
    1 0403000551 01 09 55.34 +60 00 37.4   0.2 12.18 0.40  1 0 01MU F;   4.54 209
    2 0403000725 01 10 02.45 +60 01 05.6   0.3 13.94 0.40  1 0 01MU F;   3.74 200
    3 0403000383 01 10 06.76 +60 05 25.9   0.2 11.54 0.40  1 0 01MU F;   1.13 317
    4 0403000719 01 10 12.73 +60 04 14.4   0.2 13.91 0.40  1 0 01MU F;   0.36 183
-   5 0403000581 01 10 34.84 +60 03 09.7   0.2 10.08 0.40  1 3 01MU F;   3.09 118
+   5 0403000581 01 10 34.84 +60 03 09.7   0.2 10.08 0.40  1 1 01MU F;   3.09 118
    6 0403000727 01 10 37.55 +60 04 33.6   0.2 13.94 0.40  1 0 01MU F;   3.07  91
    7 0403000561 01 10 38.58 +60 01 46.1   0.2 10.29 0.40  1 0 01MU F;   4.28 131
    8 0403000187 01 10 42.48 +60 07 24.3   0.2 11.89 0.40  1 0 01MU F;   4.63  53
-   9 0403000655 01 10 50.99 +60 04 15.8   0.3 12.95 0.40  1 3 01MU F;   4.76  94
+   9 0403000655 01 10 50.99 +60 04 15.8   0.3 12.95 0.40  1 1 01MU F;   4.76  94
